<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoodleJump</string>
    <string name="play_button">Play</string>
    <string name="doodle_jump_title">Doodle Jump</string>
    <string name="play_button_text">Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_text">Log In</string>
    <string name="register_button_text">Register</string>
    <string name="log_in_textView">Log In</string>
    <string name="username_text">Username</string>
    <string name="password_hint">Password</string>
    <string name="back_button_text">Back</string>
    <string name="register_textField">Register</string>
    <string name="confirm_pass_hint">Confirm Pass</string>
    <string name="username_textView">Username</string>
    <string name="score_text">Score</string>
    <string name="log_out_text">Log Out</string>
    <string name="best_scores">My Scores</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="gergely_zsolt">Gergely Zsolt</string>
    <string name="halasz_botond">Halász Botond</string>
    <string name="szanto_zoltan">Szántó Zoltán</string>
    <string name="todo">TODO</string>
    <string name="this_is_an_info_button">This is an info button</string>

</resources>
