<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:text="@string/register_textField"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/username_editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="68dp" />

    <EditText
        android:id="@+id/password_editTextTextPassword"
        android:layout_width="@+id/username_editTextTextPersonName"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/username_editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/username_editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/username_editTextTextPersonName" />

    <EditText
        android:id="@+id/password_editTextTextPassword2"
        android:layout_width="@+id/username_editTextTextPersonName"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/confirm_pass_hint"
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/password_editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/password_editTextTextPassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/menu_button"
        android:fontFamily="casual"
        android:shadowColor="#BD8751"
        android:shadowDx="5"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/register_button_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_editTextTextPassword2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/menu_button"
        android:fontFamily="casual"
        android:shadowColor="#BD8751"
        android:shadowDx="5"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/back_button_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/password_editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/password_editTextTextPassword2" />


</androidx.constraintlayout.widget.ConstraintLayout>