<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="60dp"
        android:fontFamily="casual"
        android:text="@string/username_textView"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:text="@string/score_text"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/menu_button"
        android:fontFamily="casual"
        android:shadowColor="#BD8751"
        android:shadowDx="5"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/log_out_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/score" />


</androidx.constraintlayout.widget.ConstraintLayout>