<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/menu_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:shadowColor="@android:color/holo_green_light"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="8"
            android:text="@string/doodle_jump_title"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_doodle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            android:src="@drawable/player2"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/name1_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/gergely_zsolt"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/name2_textView"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/halasz_botond"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/ic_hacker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/todo"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="70dp"

            android:src="@drawable/ic_coordination"
            app:layout_constraintBottom_toBottomOf="@+id/name3_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name3_textView"
            app:layout_constraintTop_toTopOf="@+id/name3_textView"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/name3_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/szanto_zoltan"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_doodle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>