<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mygdx.game.ui.fragments.LoginFragment">

    <EditText
        android:id="@+id/username_editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autofillHints="Asd"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/username_text"
        android:textCursorDrawable="@color/black"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_green_dark"
        android:textColorHint="@color/gray"
        android:textStyle="italic"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_shape"
        app:layout_constraintBottom_toTopOf="@id/password_editTextTextPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_editTextTextPassword"
        android:layout_width="@+id/username_editTextTextPersonName"
        android:layout_height="40dp"
        android:autofillHints="@null"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="italic"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@color/black"
        android:background="@drawable/edit_text_shape"
        app:layout_constraintEnd_toEndOf="@+id/username_editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/username_editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@id/username_editTextTextPersonName"
        app:layout_constraintBottom_toTopOf="@id/log_in_button"
        tools:layout_editor_absoluteY="205dp" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/menu_button"
        android:fontFamily="casual"
        android:shadowColor="#BD8751"
        android:shadowDx="5"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/log_in_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/password_editTextTextPassword"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/menu_button"
        android:fontFamily="casual"
        android:shadowColor="#BD8751"
        android:shadowDx="5"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/back_button_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/log_in_button"
        app:layout_constraintStart_toStartOf="@+id/password_editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/log_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>